; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_hdspm.c_snd_hdspm_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_hdspm.c_snd_hdspm_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.snd_pcm_channel_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*, i32, i8*)* @snd_hdspm_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_hdspm_ioctl(%struct.snd_pcm_substream* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.snd_pcm_substream*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.snd_pcm_channel_info*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %19 [
    i32 128, label %10
    i32 129, label %13
  ]

10:                                               ; preds = %3
  %11 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %5, align 8
  %12 = call i32 @snd_hdspm_reset(%struct.snd_pcm_substream* %11)
  store i32 %12, i32* %4, align 4
  br label %25

13:                                               ; preds = %3
  %14 = load i8*, i8** %7, align 8
  %15 = bitcast i8* %14 to %struct.snd_pcm_channel_info*
  store %struct.snd_pcm_channel_info* %15, %struct.snd_pcm_channel_info** %8, align 8
  %16 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %5, align 8
  %17 = load %struct.snd_pcm_channel_info*, %struct.snd_pcm_channel_info** %8, align 8
  %18 = call i32 @snd_hdspm_channel_info(%struct.snd_pcm_substream* %16, %struct.snd_pcm_channel_info* %17)
  store i32 %18, i32* %4, align 4
  br label %25

19:                                               ; preds = %3
  br label %20

20:                                               ; preds = %19
  %21 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @snd_pcm_lib_ioctl(%struct.snd_pcm_substream* %21, i32 %22, i8* %23)
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %20, %13, %10
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @snd_hdspm_reset(%struct.snd_pcm_substream*) #1

declare dso_local i32 @snd_hdspm_channel_info(%struct.snd_pcm_substream*, %struct.snd_pcm_channel_info*) #1

declare dso_local i32 @snd_pcm_lib_ioctl(%struct.snd_pcm_substream*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
